@@ -19,7 +19,7 @@
 autokey \- keyboard automation utility
 .SH SYNOPSIS
 .B autokey
-.RI [ -v | --verbose ]
+.RI [ options ]
 .SH DESCRIPTION
 This manual page briefly documents the
 .B autokey
